Updates to code and report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -73,6 +73,11 @@
   howpublished = {\url{https://github.com/ocornut/imgui/}}
 }
 
+@misc{cereal,
+  title        = {cereal - A C++11 library for serialization},
+  howpublished = {\url{https://uscilab.github.io/cereal/}}
+}
+
 @misc{imguizmo,
   title        = {ImGuizmo},
   howpublished = {\url{https://github.com/CedricGuillemet/ImGuizmo}}
